--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./font-awesome/css/all.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="icon" type="image/png" href="./assets/images/icono.png" />
 
 </head>
@@ -19,15 +20,15 @@
         </div>
 
         <div class="content">
-            <div class="imageindex">
+            <div class="imageindex animated bounceInDown delay-0,5s">
                 <h2>Batalla</h2>
                 <img src="./assets/images/batallaindex.jpg">
             </div>
-            <div class="imageindex">
+            <div class="imageindex animated bounceInDown delay-1s">
                 <h2>Viaje</h2>
                 <img src="./assets/images/travelindex.png">
             </div>
-            <div class="imageindex">
+            <div class="imageindex animated bounceInDown delay-2s">
                 <h2>Comunidad</h2>
                 <img src="./assets/images/fasecomunidadindex.jpg">
             </div>
